# Engine

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
docs/: Coding_Guidelines.md
examples/00-hello-world/: CMakeLists.txt
examples/00-hello-world/include/: Application.h
examples/00-hello-world/src/: Application.cpp  main.cpp
examples/01-input/: CMakeLists.txt
examples/01-input/src/: Application.cpp  main.cpp
examples/02-buffers/: CMakeLists.txt
examples/02-buffers/include/: Application.h
examples/02-buffers/src/: Application.cpp
examples/03-shaders/: CMakeLists.txt
examples/03-shaders/include/: Application.h
examples/03-shaders/src/: Application.cpp
examples/04-camera/: CMakeLists.txt
examples/04-camera/src/: Application.cpp
examples/05-models/: CMakeLists.txt
examples/05-models/include/: Application.h
examples/05-models/src/: Application.cpp  main.cpp
include/Core/: Application.h  ApplicationBase.h  Window.h  defines.h
include/Engine/Core/: ApplicationBase.h  Defines.h  Input.h  Log.h  Window.h
include/Engine/GFX/: Camera.h  FPVCamera.h  Model.h  ModelInstance.h  ModelLoader.h  Shader.h  ShaderBuilder.h  VertexBuffer.h  VertexBufferBuilder.h
include/Engine/Math/: Transform.h
include/Engine/Utils/: List.h
src/Core/: Application.cpp  ApplicationBase.cpp  Input.cpp  Window.cpp
src/GFX/: Camera.cpp  FPVCamera.cpp  ModelInstance.cpp  ModelLoader.cpp  Shader.cpp  ShaderBuilder.cpp  VertexBuffer.cpp  VertexBufferBuilder.cpp
src/Math/: Transform.cpp
src/Utils/: List.cpp
